--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Gulupress
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
+avatar: https://www.flaticon.com/svg/static/icons/svg/84/84473.svg
 # Flags below are optional
 #
 
@@ -26,7 +24,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
