--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Gulupress
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A family from somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://www.flaticon.com/svg/static/icons/svg/84/84473.svg
